--- a/styles/main.css
+++ b/styles/main.css
@@ -37,14 +37,8 @@
     font-size: 1.5em;
 }
 
-.piko-abilities {
+.piko-abilities {}
 
-}
+.piko-category {}
 
-.piko-category {
-
-}
-
-.piko-weakness {
-
-}
+.piko-weakness {}
